# Scatter

./: .gitignore  BUILD.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  README.md  RELEASE_SUMMARY.md  TODO.md  build-requirements.txt  build_standalone.py  inventory.example.yaml  pyproject.toml  requirements.txt  scatter.spec.template  standalone_entry.py  test_build.py
.github/workflows/: release.yml  standalone-release.yml  wheels.yml
scatter/: cli.py  config.py  ssh.py
tests/: conftest.py  test_cli_command_file.py  test_cli_dry_run.py  test_cli_help.py  test_cli_overrides_and_filters.py  test_cli_precedence_and_paths.py  test_cli_stubbed_results.py  test_config.py  test_config_validation_and_env.py  test_credential_lists.py  test_filters.py  test_jsonl_logging_contents.py  test_known_hosts_normalization.py  test_logging_and_dirs.py  test_logging_jsonl.py  test_progress_flag.py  test_progress_streaming.py  test_pty_flag.py  test_save_dir_outputs.py  test_ssh_layer.py  test_verbose_and_output_flags.py
